<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="datum"
            type="com.example.btvn3.models.Datum" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/like"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/like" />

                <ImageView
                    android:id="@+id/clap"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/clap" />

                <ImageView
                    android:id="@+id/heart"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/heart" />

                <TextView
                    android:id="@+id/txt_reaction_count"
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="4dp"
                    tools:text="@string/reaction_co"
                    android:text="@{String.valueOf(datum.counts.react_count)}"
                    android:textAppearance="@style/reaction_co"
                    android:lineSpacingExtra="3sp"
                    android:translationY="-1.65sp"
                    android:gravity="top" />

                <TextView
                    android:id="@+id/txt_comment_count"
                    android:layout_width="83dp"
                    android:layout_height="20dp"
                    tools:text="@string/comment_cou"
                    android:textAppearance="@style/comment_cou"
                    android:lineSpacingExtra="3sp"
                    android:translationY="-1.65sp"
                    android:text="@{Integer.toString(datum.counts.comment_count) + ` Bình luận`}"
                    android:layout_marginStart="90dp"
                    android:gravity="right|top" />

                <TextView
                    android:id="@+id/txt_share_count"
                    android:layout_width="62dp"
                    android:layout_height="20dp"
                    tools:text="@string/share_count"
                    android:text="@{Integer.toString(datum.counts.share_count) + ` Chia sẻ`}"
                    android:textAppearance="@style/share_count"
                    android:lineSpacingExtra="3sp"
                    android:translationY="-1.65sp"
                    android:layout_marginStart="12dp"
                    android:gravity="right|top" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="336dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/divider" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/post_common"
            android:layout_width="360dp"
            android:layout_height="40dp">

            <ImageView
                android:layout_width="19.17dp"
                android:layout_height="19.13dp"
                android:layout_marginStart="28.33dp"
                android:layout_marginTop="10.04dp"
                android:layout_marginBottom="10.83dp"
                android:src="@drawable/ic_ic24_line20_like_thumb_up" />

            <TextView
                android:id="@+id/th_ch"
                android:layout_width="39dp"
                android:layout_height="20dp"
                android:text="@string/th_ch"
                android:textAppearance="@style/th_ch"
                android:layout_marginStart="53.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:lineSpacingExtra="3sp"
                android:gravity="center_vertical" />

            <ImageView
                android:layout_width="19.17dp"
                android:layout_height="19.13dp"
                android:layout_marginStart="135.83dp"
                android:layout_marginTop="10.83dp"
                android:layout_marginBottom="11.68dp"
                android:src="@drawable/ic_ic24_line20_bubble_rectangle" />

            <TextView
                android:id="@+id/binh_luan"
                android:layout_width="64dp"
                android:layout_height="20dp"
                android:layout_marginStart="161dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="3sp"
                android:text="@string/b_nh_lu_n"
                android:textAppearance="@style/th_ch" />

            <ImageView
                android:layout_width="19.17dp"
                android:layout_height="19.13dp"
                android:layout_marginStart="262.33dp"
                android:layout_marginTop="10.67dp"
                android:layout_marginBottom="12.5dp"
                android:src="@drawable/ic_ic24_line20_arrowshape_turn_right" />

            <TextView
                android:id="@+id/chia_se"
                android:layout_width="51dp"
                android:layout_height="20dp"
                android:text="@string/chia_s_"
                android:textAppearance="@style/th_ch"
                android:layout_marginStart="287.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="21.5dp"
                android:lineSpacingExtra="3sp"
                android:gravity="center_vertical" />

        </RelativeLayout>

        <View
            android:layout_width="336dp"
            android:layout_height="1dp"
            android:background="@drawable/divider" />

    </LinearLayout>
</layout>