<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/feed_create"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="276dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/ic_gapo_logo" />

                <RelativeLayout
                    android:layout_width="216dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp">

                    <TextView
                        android:id="@+id/workspace_n"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="3sp"
                        android:text="@string/workspace_n"
                        android:textAppearance="@style/workspace_n" />
                </RelativeLayout>

            </LinearLayout>

            <View
                android:id="@+id/vector"
                android:layout_width="19.75dp"
                android:layout_height="19.75dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_ic24_line15_magnifyingglass_search" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20.25dp"
                android:src="@drawable/ic_3line" />

            <View
                android:id="@+id/badge"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginStart="-4dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/ic_badge" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:clipToOutline="true"
            android:background="@drawable/feed_create">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/image"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp" />

            <TextView
                android:id="@+id/b_n_mu_n_ch"
                android:layout_width="172dp"
                android:layout_height="20dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="22dp"
                android:gravity="top"
                android:lineSpacingExtra="3sp"
                android:text="@string/b_n_mu_n_ch"
                android:textAppearance="@style/b_n_mu_n_ch"
                android:translationY="-1.65sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="15dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="76.5dp"
                android:src="@drawable/ic_function_icon" />

            <TextView
                android:id="@+id/function_ti"
                android:layout_width="76dp"
                android:layout_height="20dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="74dp"
                android:gravity="top"
                android:lineSpacingExtra="3sp"
                android:text="@string/function_ti"
                android:textAppearance="@style/function_ti"
                android:translationY="-1.65sp" />

            <ImageView
                android:layout_width="18.33dp"
                android:layout_height="18.33dp"
                android:layout_marginStart="130.83dp"
                android:layout_marginTop="74.83dp"
                android:src="@drawable/ic_function_icon_2" />

            <TextView
                android:id="@+id/function_ti2"
                android:layout_width="72dp"
                android:layout_height="20dp"
                android:layout_marginStart="158dp"
                android:layout_marginTop="74dp"
                android:gravity="top"
                android:lineSpacingExtra="3sp"
                android:text="@string/function_ti2"
                android:textAppearance="@style/function_ti"
                android:translationY="-1.65sp" />

            <ImageView
                android:layout_width="16.67dp"
                android:layout_height="16.67dp"
                android:layout_marginStart="253.17dp"
                android:layout_marginTop="75.67dp"
                android:src="@drawable/ic_function_icon_3" />

            <TextView
                android:id="@+id/function_ti3"
                android:layout_width="72dp"
                android:layout_height="20dp"
                android:layout_marginStart="279.5dp"
                android:layout_marginTop="74dp"
                android:gravity="top"
                android:lineSpacingExtra="3sp"
                android:text="@string/function_ti3"
                android:textAppearance="@style/function_ti"
                android:translationY="-1.65sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@drawable/divider" />

    </LinearLayout>
</layout>